# fischl-rs

./: Cargo.toml  README.md  build.rs
proto/: SophonManifest.proto
src/: lib.rs
src/compat/: dxvk.rs  mod.rs  prefix.rs
src/download/: compatibility.rs  extras.rs  misc.rs  mod.rs  xxmi.rs
src/download/game/: hoyo.rs  kuro.rs  mod.rs  repairer.rs  zipped.rs
src/utils/: codeberg_structs.rs  downloader.rs  free_space.rs  git_structs.rs  github_structs.rs  mod.rs  proto.rs
src/utils/game/: mod.rs
src/utils/game/hoyo/: mod.rs  voice_locale.rs
