[package]
name = "fischl"
description = "Helper library to manage compatibility and downloads for KeqingLauncher"
authors = ["TukanDev"]
version = "0.1.0"
edition = "2024"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

[target.'cfg(target_os = "linux")'.dependencies]
wincompatlib = {version = "0.7.7", features = ["all"], optional = true}

[dependencies]
serde = {version = "1", features = ["derive"]}
reqwest = {version = "0.12", features = ["blocking", "json", "stream", "native-tls-vendored"]}
chksum-md5 = {version = "0.1.0", features = ["async-runtime-tokio"], optional = true}
prost = {version = "0.14", features = [], optional = true}
tokio = {version = "1.45", features = ["macros"]}
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
sysinfo = "0.36"
serde_json = "1.0"
thiserror = "1.0"
futures-util = "0.3"
futures = "0.3"
zip = {version = "4.2.0", default-features = false, features = ["deflate"], optional = true}
tar = {version = "0.4.44", optional = true}
flate2 = {version = "1.1.2", default-features = false, features = ["zlib-rs"], optional = true}
liblzma = {version = "0.4.2", features = ["static"], optional = true}
zstd = {version = "0.13.3", optional = true}
crossbeam-deque = {version = "0.8.6", optional = true}

[features]
compat = ["dep:wincompatlib"]
download = ["dep:zip", "dep:tar", "dep:flate2", "dep:liblzma", "dep:zstd", "dep:chksum-md5", "dep:prost", "dep:crossbeam-deque"]

default = ["download"]
