[package]
name = "fischl"
description = "Helper library to manage compatibility and downloads for KeqingLauncher"
authors = ["TukanDev"]
version = "0.1.0"
edition = "2024"

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3"

[dependencies]
serde = {version = "1", features = ["derive"]}
reqwest = {version = "0.13.2", features = ["blocking", "json", "stream", "native-tls-vendored", "__tls"]}
chksum-md5 = {version = "0.1.0", features = ["async-runtime-tokio"], optional = true}
sha2 = {version = "0.11.0", optional = true}
prost = {version = "0.14.3", features = [], optional = true}
tokio = {version = "1.52", features = ["macros", "fs", "io-util", "time", "sync"]}
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
sysinfo = "0.37.2"
serde_json = "1.0.149"
thiserror = "1.0"
futures-util = "0.3.32"
zip = {version = "8.1.0", default-features = false, features = ["deflate"], optional = true}
tar = {version = "0.4.44", optional = true}
flate2 = {version = "1.1.9", default-features = false, features = ["zlib-rs"], optional = true}
liblzma = {version = "0.4.6", features = ["static"], optional = true}
zstd = {version = "0.13.3", optional = true}
zesven = {git = "https://github.com/TukanDev/zesven.git", branch = "main", features = ["zstd", "lz4", "brotli"], optional = true}
crossbeam-deque = {version = "0.8.6", optional = true}

# patching lib
hdiffpatch-rs = { git = "https://github.com/TwintailTeam/hdiffpatch-rs.git", branch = "master" }

[features]
compat = ["dep:sha2"]
download = ["dep:zip", "dep:tar", "dep:flate2", "dep:liblzma", "dep:zstd", "dep:zesven", "dep:chksum-md5", "dep:prost", "dep:crossbeam-deque"]

default = ["download"]
